Kustomize/Example2/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dev.example.com # add this entry to your host file - 127.0.0.1 foo.bar.com
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
             name: nginx-service # this is name of the service
             port:
                number: 8086 # this is the service's cluster port exposed to be talked to a lot
